--- a/app/src/_scss/sections/_Sale50Section.scss
+++ b/app/src/_scss/sections/_Sale50Section.scss
@@ -1,36 +1,49 @@
 .showcase {
     
+    position: relative;
     padding: 0;
-    height: 884px;
+    height: calc(884px + var(--nav-height));
+    transform: translateY(calc(var(--nav-height) * -1));
+    
+    img {
+        z-index: 1;
+        top: var(--nav-height);
+        height: fit-content;
+    }
 
     img:nth-of-type(1) {
         position: absolute;
         left: 0;
-        z-index: -10;
         margin: 0;
+        height: 884px;
     }
     
     img:nth-of-type(2) {
         position: absolute;
+        height: 884px;
         right: 0;
-        z-index: -10;
     }
-
+    
     div {
         position: absolute;
-        top: 250px;
+        top: var(--nav-height);
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
         text-align: center;
-        left: calc(50% - (466px / 2));
-        height: 100%;
         transition: all 1s ease;
+        z-index: 2;
     }
 
     @media only screen and (max-width: 1560px) {
-
+        
+        height: fit-content;
+        
         img:nth-of-type(2) {
             display: none;
         }
-
+        
         img:nth-of-type(1) {
             opacity: 75%;
             position: static;
