--- a/app/src/_scss/App.css
+++ b/app/src/_scss/App.css
@@ -35,11 +35,23 @@
       overscroll-behavior: none;
 }
 
-@media only screen and (max-width: 1200px) {
-  h5 {
-    text-align: center;
-  }
+#root {
+  display: flex;
+  flex-direction: column;
 }
+
+.not-found {
+  height: calc(100vh - var(--nav-height) - var(--footer-height) * 2);
+}
+
+.line {
+  margin-top: 65px;
+  margin-bottom: 65px;
+  background-color: #616365;
+  height: 1px;
+  width: 100%;
+}
+
 .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
   padding: 0;
   margin: 0;
@@ -72,10 +84,6 @@
     margin-left: 22px;
     margin-right: 22px;
   }
-}
-
-.not-found {
-  height: calc(100vh - var(--nav-height) - var(--footer-height) * 2);
 }
 
 h1 {
@@ -135,13 +143,6 @@ section {
   text-align: center;
 }
 
-.line {
-  margin-top: 65px;
-  margin-bottom: 65px;
-  background-color: #616365;
-  height: 1px;
-}
-
 fieldset {
   display: flex;
   flex-direction: row;
@@ -159,36 +160,6 @@ select {
   width: fit-content;
   padding-left: 12px;
   padding-right: 12px;
-}
-
-.scrollable {
-  overflow-y: auto;
-  overflow-x: auto;
-}
-
-.container-table {
-  display: grid;
-  grid-gap: 10px;
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.child {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 5px;
-  border: 3px solid #a07;
-}
-
-#root {
-  display: flex;
-  flex-direction: column;
-}
-
-@media only screen and (max-width: 950px) {
-  .w-md-auto {
-    width: 80vw !important;
-  }
 }
 
 .weird-align {
@@ -258,63 +229,39 @@ select {
   grid-area: l;
 }
 
-@media only screen and (max-width: 900px) {
-  .text-s-white {
-    color: white;
+@media only screen and (max-width: 950px) {
+  .w-md-auto {
+    width: 80vw !important;
   }
 }
 
-.color-white {
+.c-white {
   color: white;
 }
 
-.color-gray {
+.c-gray {
   color: #616365;
-}
-
-.bg-brown {
-  background-color: #75695C;
 }
 
 .bg-light-gray {
   background-color: var(--color-light-gray);
 }
 
-.bg-gray {
-  background-color: var(--color-gray);
-}
-
-.bg-dark-gray {
-  background-color: var(--color-dark-gray);
-}
-
-.bg-gray {
-  background-color: var(--color-gray);
-}
-
-.background-white {
-  background-color: var(--color-white);
-}
-
-.background-dark {
-  background-color: var(--color-dark);
-}
-
-.background-customer-support {
+.bg-customer-support {
   background-image: url("../img/customer-support.svg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 22px;
 }
 
-.background-credit-card {
+.bg-credit-card {
   background-image: url("../img/credit-card.svg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 22px;
 }
 
-.background-delivery-truck {
+.bg-delivery-truck {
   background-image: url("../img/delivery-truck.svg");
   background-position: center;
   background-repeat: no-repeat;
@@ -364,68 +311,12 @@ select {
   background-position: center;
 }
 
-.height-60 {
-  height: 60px !important;
-}
-
-.height-232 {
-  height: 232px;
-}
-
-.height-400 {
-  height: 400px;
-}
-
 .h-403 {
   height: 403px;
 }
 
-.height-560 {
-  height: 560px;
-}
-
-.height-670 {
-  height: 670px;
-}
-
-.height-100p {
-  height: 100%;
-}
-
-.width-60 {
-  width: 60px !important;
-}
-
-.width-635 {
-  width: 635px;
-}
-
-.width-490 {
-  width: 490px;
-}
-
-.width-255 {
-  width: 255px;
-}
-
 .w-540 {
   width: 540px;
-}
-
-.w-160 {
-  width: 160px;
-}
-
-.width-50p {
-  width: 50%;
-}
-
-.width-100p {
-  width: 100%;
-}
-
-.max-width-342 {
-  max-width: 342px;
 }
 
 .max-width-425 {
@@ -454,73 +345,20 @@ select {
   min-width: 0 !important;
 }
 
-.mb-80 {
-  margin-bottom: 80px;
-}
-
-.padding-0 {
-  padding: 0px !important;
-}
-
-.padding-8 {
-  padding: -8px !important;
-}
-
-.padding-50 {
+.p-50 {
   padding: 50px;
 }
 
-.padding-64 {
+.p-64 {
   padding: 64px;
 }
 
-.margin-0 {
-  margin: 0px;
-}
-
-.margin-30 {
-  margin: 30px;
-}
-
-.margin-vertical-30 {
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-
-.margin-top-50p {
-  margin-top: 50%;
-}
-
-.margin-top-90 {
-  margin-top: 90px;
-}
-
-.margin-bottom-26 {
+.mb-26 {
   margin-bottom: 26px;
 }
 
-.margin-bottom-30 {
-  margin-bottom: 30px;
-}
-
-.margin-bottom-34 {
+.mb-34 {
   margin-bottom: 34px;
-}
-
-.margin-bottom-100 {
-  margin-bottom: 100px;
-}
-
-.margin-left-0 {
-  margin-left: 0px;
-}
-
-.margin-left-32 {
-  margin-left: 32px;
-}
-
-.gap-10 {
-  gap: 10px;
 }
 
 .g-30 {
@@ -530,17 +368,6 @@ select {
 .g-30-offset {
   margin-left: 30px;
   margin-right: 30px;
-}
-
-.error {
-  color: red;
-}
-
-@media only screen and (max-width: 900px) {
-  .s-align-center {
-    text-align: center !important;
-    max-width: auto !important;
-  }
 }
 
 @media only screen and (min-width: 1722px) {
@@ -557,6 +384,28 @@ select {
     display: none !important;
   }
 }
+@media only screen and (max-width: 900px) {
+  .s-align-center {
+    text-align: center !important;
+    max-width: auto !important;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .text-s-white {
+    color: white;
+  }
+}
+
+.error {
+  color: red;
+}
+
+.scrollable {
+  overflow-y: auto;
+  overflow-x: auto;
+}
+
 [badge] {
   position: relative;
 }
